fixed overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --breakpoint-xs: 0rem;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +25,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+html {
+  overflow-x: hidden;
 }
